[package]
name = "rust-connector-api"
version = "0.1.0"
edition = "2021"
authors = ["Meteomatics"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.28.0", features = ["full"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
url = "2"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
chrono = "0.4"
derive_builder = "0.12.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt", "macros"] }
