[package]
name = "rust-connector-api"
version = "0.1.0"
edition = "2021"
authors = ["Meteomatics"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.28.0", features = ["full"] }
csv = "1.1"
url = "2"
strum_macros = "0.27.1"
chrono = "0.4"
derive_builder = "0.20.2"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt", "macros"] }
